Adjustments:     - one-to-one rel between Gateway accs, Blockchain accs and Memberships,     - bug fixes
